--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,10 +9,21 @@ body {
   margin-top: 100px;
 }
 
+#welcome-page {
+  position: fixed;
+  left: 30%;
+  top: 30%;
+}
+
+#google-auth {
+  margin-top: 30px;
+}
+
 #navbar {
   position: absolute;
   top: 0px;
   width: 100%;
+  height: 0px;
 }
 
 #filter-buttons {
